Excel Sheet connection for data

--- a/POM1/Configuration/Environment.config
+++ b/POM1/Configuration/Environment.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <appSettings>
-	<add key="URL1" value="https://demoqa.com/login"/>
-	<add key="URL2" value="https://demoqa.com/text-box"/>
+	<add key="URL1" value="https://demoqa.com/login" />
+	<add key="URL2" value="https://demoqa.com/text-box" />
+	<add key="TestDataSheetPath" value="D:\Bassetti Training\PageObjectModel\Model1\POM1\DataAccess\ExcelTestData.xlsx" />
 </appSettings>
 	
